--- a/style/styles.css
+++ b/style/styles.css
@@ -144,6 +144,8 @@ body .content img{
     width: 75%;
 }
 body .content #decompte{
+    text-transform: uppercase;
+    //text-decoration: underline;
     position: absolute;
     left: 50%;
     right: 50%;
@@ -151,6 +153,8 @@ body .content #decompte{
     top: 30%;
     font-size: 42pt;
     width: 700px;
+    //transform: translateX(-50%) translateY(-50%);
+    letter-spacing: 10px;
 }
 
 /* CONTAINER */
@@ -217,4 +221,37 @@ body .content #decompte{
 .grad div.featuring ul li b{
     font-weight: 600;
     text-transform: uppercase;
+}
+
+#decompte {
+  text-transfrom:uppercase;
+  color:white;
+  //font-size:6em;
+  text-align:center;
+  animation: neonGlow 2s infinite alternate cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+
+
+@keyframes neonGlow {
+  0% {
+    text-shadow: 0 0 10px rgba(255,255,255,.8),
+                 0 0 20px rgba(255,255,255,.8),
+                 0 0 22px  rgba(255,255,255,.8),
+                 0 0 40px  rgba(80, 241, 255,.8),
+                 0 0 60px  rgba(80, 241, 255,.8),
+                 0 0 80px  rgba(80, 241, 255,.5),
+                 0 0 100px rgba(80, 241, 255,.5),
+                 0 0 140px rgba(80, 241, 255,.5),
+                 0 0 200px rgba(80, 241, 255,.5);
+  }
+  100% {
+    text-shadow: 0 0 2px rgba(255,255,255,.8),
+                 0 0 8px rgba(255,255,255,.8),
+                 0 0 10px rgba(255,255,255,.8),
+                 0 0 20px rgba(66,220,219,.9),
+                 0 0 30px rgba(66,220,219,.9),
+                 0 0 40px rgba(66,220,219,.9),
+                 0 0 50px rgba(66,220,219,.5),
+                 0 0 80px rgba(66,220,219,.5);
+  }
 }
