--- a/style/styles.css
+++ b/style/styles.css
@@ -18,7 +18,7 @@ body{
 header{
     height: 45px;
     position: fixed;
-    margin-left: 260px;
+    margin-left: 225px;
     width: 100%;
     display: block;
     vertical-align: middle;
@@ -28,7 +28,7 @@ header>*{
     display: inline-block;
     float: left;
     position: absolute;
-    top: 9.5px;
+    top: 48px;
     vertical-align: middle;
 }
 header .nav .arrow{
@@ -143,18 +143,22 @@ body .sidebar-left .photo img{
 body .content img{
     width: 75%;
 }
+
 body .content #decompte{
-    text-transform: uppercase;
-    //text-decoration: underline;
     position: absolute;
     left: 50%;
     right: 50%;
     bottom: 50%;
     top: 30%;
     font-size: 42pt;
-    width: 700px;
+    width: 45%;
     //transform: translateX(-50%) translateY(-50%);
     letter-spacing: 10px;
+    text-transfrom: uppercase;
+    color:white;
+    //font-size:6em;
+    text-align:center;
+    animation: neonGlow 2s infinite alternate cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
 
 /* CONTAINER */
@@ -180,7 +184,7 @@ body .content #decompte{
 .grad{
     background-image: linear-gradient(rgba(24,24,24,0), #303030);
     width: 100%;
-    height: 175px;
+    height: 275px;
     bottom: 0px;
     position: fixed;
 }
@@ -217,19 +221,33 @@ body .content #decompte{
 .grad div.featuring ul li{
     list-style-type: none;
     line-height: 1.8;
+    padding: 0.5em;
 }
 .grad div.featuring ul li b{
     font-weight: 600;
     text-transform: uppercase;
 }
-
-#decompte {
-  text-transfrom:uppercase;
-  color:white;
-  //font-size:6em;
-  text-align:center;
-  animation: neonGlow 2s infinite alternate cubic-bezier(0.455, 0.030, 0.515, 0.955);
+.grad div.featuring ul li:hover:nth-child(odd) b{
+    color: #F2F2F2;
+    transform: rotate(-15deg) translate(100px, 5px);
+    font-size: 3em;
+    overflow: visible;
+    position: absolute;
+    background-color: inherit;
+    animation: neonGlow 2s infinite alternate cubic-bezier(0.455, 0.030, 0.515, 0.955);
 }
+.grad div.featuring ul li:hover:nth-child(even) b{
+    color: #F2F2F2;
+    transform: rotate(10deg) translate(100px, -50px);
+    font-size: 3em;
+    overflow: visible;
+    position: absolute;
+    background-color: inherit;
+    animation: neonGlowOrange 2s infinite alternate cubic-bezier(0.455, 0.030, 0.515, 0.955);
+}
+
+
+
 
 
 @keyframes neonGlow {
@@ -253,5 +271,28 @@ body .content #decompte{
                  0 0 40px rgba(66,220,219,.9),
                  0 0 50px rgba(66,220,219,.5),
                  0 0 80px rgba(66,220,219,.5);
+  }
+}
+@keyframes neonGlowOrange {
+  0% {
+    text-shadow: 0 0 10px rgba(255,255,255,.8),
+                 0 0 20px rgba(255,255,255,.8),
+                 0 0 22px  rgba(255,255,255,.8),
+                 0 0 40px  rgba(255,157,0,.8),
+                 0 0 60px  rgba(255,157,0,.8),
+                 0 0 80px  rgba(255,157,0,.5),
+                 0 0 100px rgba(255,157,0,.5),
+                 0 0 140px rgba(255,157,0,.5),
+                 0 0 200px rgba(255,157,0,.5);
+  }
+  100% {
+    text-shadow: 0 0 2px rgba(255,255,255,.8),
+                 0 0 8px rgba(255,255,255,.8),
+                 0 0 10px rgba(255,255,255,.8),
+                 0 0 20px rgba((243,185,87,.9),
+                 0 0 30px rgba((243,185,87,.9),
+                 0 0 40px rgba((243,185,87,.9),
+                 0 0 50px rgba((243,185,87,.5),
+                 0 0 80px rgba((243,185,87,.5);
   }
 }
